perf(observability): 批次 D 去 N+1、合并聚合查询、消灭静默吞异常
- 去 N+1：用户仪表盘群排行由 2×群数 次 SQL 改为「一次 GROUP BY + 一次 IN 批量取群名」；
  群聊列表由"逐绑定 QQ 查询"改为一次 IN 并去重；管理端排行非区间口径由 Top-10 逐个 COUNT
  改为一次批量聚合（新增 countActiveMessagesByGroupIds / ...Only / findByGroupIdIn /
  findByOwnerQqInAndActiveTrue）
- 钱包页收入/支出合计合并为一条聚合 SQL（CreditTransactionRepository.sumIncomeAndSpendByFilters +
  CreditService.sumIncomeAndSpend，readOnly 事务），新增断言保证与旧口径结果完全一致
  —— 该断言当场抓出多列聚合单行结果被再包一层导致合计为 0 的实现缺陷
- 静默吞异常清零：controller/service 内 6 处 catch 直接 return（日期/枚举/数字解析、
  MIME 探测、端口探测、SSE 行解析、媒体路径与地址安全判定）全部补 log.warn/debug 带上下文；
  安全判定 fail-closed 改 WARN；前端 4 处空 catch（api.js 登出与错误体解析、UserCenter、
  SubscriptionDashboard）补日志
- 守卫测试新增第三条规则：controller/service 禁止「catch 体里直接 return 或空 catch」
  —— 该规则首跑即抓出 5 个文件 6 处漏网点，修完 4/4 通过

验证：mvn test 194/194（193 + 合并查询口径断言）；实测 /api/credits/transactions?size=100000
返回 size=200（分页上限生效）、收入/支出/净额正常；管理外壳 18/18；暗色 14 页；支付链路 18/18；导出 e2e 26/26